<resources>
    <string name="app_name">Géoluciole</string>
    <string name="title_home">Home</string>
    <string name="title_achievements">Stickers</string>
    <string name="title_dashboard">Preferences</string>
    <string name="action_refused">Refuse</string>
    <string name="action_validate">Validate</string>
    <string name="action_accept">Accept</string>
    <string name="action_loader">Loading</string>
    <string name="alert_title_constructor_settings">Redirect to your settings</string>
    <string name="alert_content_constructor_settings">You will be redirected to your settings in order to deactivate the \' Automatic management \' option. For the correct functioning of the application please deactivate this option.</string>
    <string name="location_notification_content_title">Géoluciole is running</string>
    <string name="location_notification_content_text">Tracking of your journey in progress</string>
    <string name="location_notification_button_text">Open app</string>
    <string name="rgpd_title_primary">GDPR consent</string>
    <string name="rgpd_title_project">Nouvelle-Aquitaine region\'s DA3T project</string>
    <string name="rgpd_first_content_1_line">The collected data by the app are subject to a registration on the register of processing of
        La Rochelle University.</string>
    <string name="rgpd_first_content_2_line">Data are collected for research purposes by the LIENSs laboratory researchers as part of the
        DA3T project.</string>
    <string name="rgpd_first_content_3_line">The research project intend to propose an analysis device of geonumeric traces. Its goal is
        to improve Nouvelle-Aquitaine region\'s touristic territories management and valorization.</string>
    <string name="rgpd_first_content_4_line">The study finality is to examine the supposed contribution of geonumeric traces in the
        understanting of the atlantic touristic city.</string>
    <string name="rgpd_first_content_consentement">I authorize the LIENSs laboratory researchers to use my data as part of the DA3T project.</string>
    <string name="rgpd_second_content_1_line">The collected information of the following form are saved in an informatic file by La Rochelle
        University, 23 Avenue Albert Einstein, 17000 La Rochelle, France to improve Nouvelle-Aquitaine region\'s touristic territories management
        and valorization. The legal basis of data processing is your consent.</string>
    <string name="rgpd_second_content_2_line">The collected data will not be communicated to any recipient.</string>
    <string name="rgpd_second_content_3_line">Data will be retained during 5 years for scientific research purposes.</string>
    <string name="rgpd_second_content_4_line">You can access to your data, rectify them, request for their deletion or perform your data processing
        limitation right. You can remove your data processing consent at any time; You can also oppose yourself to your data processing.</string>
    <string name="rgpd_second_content_5_line">Please consult the cnil.fr website (or any corresponding relevant data protection entity from your
        country) to get more information on your rights.</string>
    <string name="rgpd_second_content_6_line">To exercise your rights or for any enquiry on the processing of your data as part of this device, you
        can contact La Rochelle University\'s DPO at dpo@univ-lr.fr.</string>
    <string name="rgpd_second_content_7_line">If you think that your privacy and informatic rights are not respected after having contacted us, you
        can send a complaint to the CNIL (or any corresponding relevant data protection entity from your country).</string>
    <string name="rgpd_second_content_consentement">I authorize the LIENSs laboratory researchers to contact me as part of this experience.</string>
    <string name="stay_progression">Progression of your stay</string>
    <string name="last_achievement_obtained">Sticker recently obtained</string>
    <string name="last_achievement_obtained_picture_description">Picture of the last sticker obtained by the user.</string>
    <string name="data_collection">Data collection</string>
    <string name="data_collection_activated">ON</string>
    <string name="data_collection_deactivated">OFF</string>
    <string name="form_title">Form</string>
    <string name="form_title_anonym">Anonymous form</string>
    <string name="form_step_one_four">1/4</string>
    <string name="form_step_two_four">2/4</string>
    <string name="form_step_three_four">3/4</string>
    <string name="form_step_four_four">4/4</string>
    <string name="form_lastname">Lastname</string>
    <string name="form_firstname">FirstName</string>
    <string name="form_mail">Mail</string>
    <string name="form_phone">Phone</string>
    <string name="form_in_city_title">Date and hour of arrival in La Rochelle</string>
    <string name="form_out_city_title">Date and hour of departure of La Rochelle</string>
    <string name="form_btn_date">Select date</string>
    <string name="form_btn_time">Select time</string>
    <string name="form_date_in_hint">01–01–2020</string>
    <string name="form_time_in_hint">10:00</string>
    <string name="form_date_out_hint">02–01–2020</string>
    <string name="form_time_out_hint">17:00</string>
    <string name="form_with_whom_title">Whom travel?*</string>
    <string name="form_prompt_whom">Choose an answer</string>
    <string name="form_explain_validation_period_part_1">The data collection period corresponds to the duration for which you consent to the collection of your GPS data.</string>
    <string name="form_explain_validation_period_part_2">After this time, we will no longer collect data. You can, if you wish, modify these periods via the \'Preferences\' menu.</string>
    <string name="form_title_start_date_validation_period">Start of collection</string>
    <string name="form_title_end_date_validation_period">End of collection</string>
    <string-array name="form_responses_whom_array">
        <item>Choose an answer</item>
        <item>Alone</item>
        <item>With family</item>
        <item>With friends</item>
        <item>With group</item>
        <item>Other</item>
    </string-array>
    <string name="field_other_title">Other</string>
    <string name="presence_children">Presence of children under 13 years old*</string>
    <string name="presence_teens">Presence of teenagers (13–18 years old)*</string>
    <string name="form_transport_title">How did you get to La Rochelle?*</string>
    <string name="form_prompt_transport">Choose an answer</string>
    <string-array name="form_responses_transport_array">
        <item>Choose an answer</item>
        <item>Personal car</item>
        <item>Carpool / Stop</item>
        <item>Bus</item>
        <item>Train</item>
        <item>Flight </item>
        <item>Boat</item>
        <item>Camping Car</item>
        <item>Cycling</item>
        <item>Other</item>
    </string-array>
    <string name="precision">Precision</string>
    <string name="form_first_visit_title">Are you visiting La Rochelle for the first time?*</string>
    <string name="form_know_city_title">Would you say you know La Rochelle well?*</string>
    <string name="form_more_five_times_title">Have you been to La Rochelle more than 5 times?*</string>
    <string name="form_more_two_months_title">Have you ever lived in La Rochelle for more than two months?*</string>
    <string name="form_yes_response">Yes</string>
    <string name="form_no_response">No</string>
    <string name="form_continue">Next</string>
    <string name="form_previous">Previous</string>
    <string name="form_submit">Submit</string>
    <string name="form_err_required">Required</string>
    <string name="form_err_mail">Invalid email</string>
    <string name="form_err_radio">Select an answer</string>
    <string name="form_required">*required</string>
    <string name="dates_settings">Commitment period</string>
    <string name="dates_settings_start">Start date</string>
    <string name="dates_settings_end">End date</string>
    <string name="app_language">App language</string>
    <string name="french_language">French</string>
    <string name="english_language">English</string>
    <string name="partners">Our project</string>
    <string name="licence_agreement">Consult the EULA</string>
    <string name="revoke_consent">Revoke my consent</string>
    <string name="title_my_identifier">My identifier</string>
    <string name="no_identifier">No identifier</string>
    <string name="send_data">Send data</string>
    <string name="toast_error_send_data">Error sending data</string>
    <string name="toast_success_send_data">Data sent</string>
    <string name="toast_no_data">No data to send</string>
    <string name="text_stats_title">Statistics</string>
    <string name="text_distance">Distance traveled: </string>
    <string name="text_distance_value">0 km</string>
    <string name="no_achievement_picture_description">Oops, no sticker!</string>
    <string name="achievement_title">Badges obtained</string>
    <string name="notification_title">"New Badge unlocked !"</string>
    <string name="one_km_description"> "Congratulation! You have just traveled 1km" </string>
    <string name="five_km_description"> "Congratulation! You have just traveled 5km" </string>
    <string name="ten_km_description"> "Congratulation! You have just traveled 10km" </string>
    <string name="tour_saint_nicolas_description"> "Congratulation! You have just discovered the Tour Saint Nicolas" </string>
    <string name="tour_de_la_chaine_description"> "Congratulation! You have just discovered the Tour de la Chaîne" </string>
    <string name="tour_de_la_lanterne_description"> "Congratulation! You have just discovered the Lantern Tower" </string>
    <string name="eglise_saint_sauveur_description"> "Congratulation! You have just discovered the Saint-Sauveur Church" </string>
    <string name="grosse_horloge_description"> "Congratulation! You have just discovered the Grosse Horloge" </string>
    <string name="plage_de_la_concurrence_description"> "Congratulation! You have just discovered the Plage de la Concurrence"</string>
    <string name="place_des_minimes_description"> "Congratulation! You have just discovered the Plage des Minimes"</string>
    <string name="marche_central_description"> "Congratulation! You have just discovered the Marché Central"</string>
    <string name="aquarium_description"> "Congratulation! You have just discovered the l'Aquarium de La Rochelle"</string>
    <string name="place_verdun_description"> "Congratulation! You have just discovered the Place de Verdun"</string>
    <string name="back">Back</string>
    <string name="copy">Copy my username to the clipboard</string>
    <string name="sendMail">I continue</string>
    <string name="send">Send mail</string>
    <string name="copy_success"> The identifier has been copied to the clipboard </string>
    <string name="revoke_title">Revoque my consent</string>
    <string name="revoke_title_no_consent">Accept consent</string>
    <string name="revoke_text_1">To revoke your consent and delete the data related to your activity please send an email to
        the following address:</string>
    <string name="revoke_text_2">By clicking continue you will be redirected to your email application if you have an email account linked.</string>
    <string name="message_mail_revoke"> I request the deletion of my data. </string>
    <string name="logo_desc_larochelle">logo of La Rochelle Université</string>
    <string name="logo_desc_cnrs">logo of CNRS</string>
    <string name="logo_desc_lienss">logo of LIENSs</string>
    <string name="logo_desc_l3i">logo of L3i</string>
    <string name="message_update_date_title">Update date</string>
    <string name="message_update_date">Are you sure to update this date?</string>
</resources>