<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PartnerActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/first_line"
                style="@style/textviewContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:text="@string/rgpd_first_content_1_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/second_line"
                style="@style/textviewContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:text="@string/rgpd_first_content_2_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_line" />

            <TextView
                android:id="@+id/third_line"
                style="@style/textviewContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:text="@string/rgpd_first_content_3_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_line" />

            <TextView
                android:id="@+id/fourth_line"
                style="@style/textviewContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:text="@string/rgpd_first_content_4_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/third_line" />

            <View
                android:id="@+id/divider"
                android:layout_width="150dp"
                android:layout_height="2dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="#000000"
                app:layout_constraintBottom_toTopOf="@+id/partners_pictures_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourth_line" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/partners_pictures_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <ImageView
                    android:id="@+id/logo_ulr"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/logo_desc_larochelle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/logo_ulr" />

                <ImageView
                    android:id="@+id/logo_cnrs"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/logo_desc_cnrs"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/logo_cnrs" />

                <ImageView
                    android:id="@+id/logo_lienss"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/logo_desc_lienss"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo_ulr"
                    app:srcCompat="@mipmap/logo_lienss" />

                <ImageView
                    android:id="@+id/logo_l3i"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/logo_desc_l3i"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logo_cnrs"
                    app:srcCompat="@mipmap/logo_l3i" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>